--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/service-worker
+spring.datasource.username=root
+spring.datasource.password=2022
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+######################################################################################
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+##hibernate.dialect.storage_engine=innodb
+#spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+#######################################################################################
+
+jwt.secret=javainuse
+spring.main.allow-circular-references=true
+
